kubernetes/apps/mimir/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mimir
  namespace: monitoring
  labels:
    app: mimir
spec:
  selector:
    app: mimir
  ports:
  - name: http
    port: 80
    targetPort: 9009
